--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "black>=26.1.0",
+    "isort>=7.0.0",
+    "jupyterlab>=4.5.3",
+    "langchain>=1.2.8",
+    "python-dotenv>=1.2.1",
+]
