--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "isort>=7.0.0",
     "jupyterlab>=4.5.3",
     "langchain>=1.2.8",
+    "langgraph>=1.0.7",
     "python-dotenv>=1.2.1",
 ]
