--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "isort>=7.0.0",
     "jupyterlab>=4.5.3",
     "langchain>=1.2.8",
+    "langchain-ollama>=1.0.1",
+    "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
 ]
