--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.14"
 dependencies = [
     "black>=26.1.0",
     "isort>=7.0.0",
+    "jupyter>=1.1.1",
     "jupyterlab>=4.5.3",
+    "lab>=8.8",
     "langchain>=1.2.8",
     "langchain-ollama>=1.0.1",
     "langchain-openai>=1.1.7",
