feat: Add multi-cloud provider support for AWS and Azure with dynamic graph building and dedicated validation synthesis.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "jupyterlab>=4.5.3",
     "lab>=8.8",
     "langchain>=1.2.8",
+    "langchain-chroma>=1.1.0",
+    "langchain-community>=0.4.1",
     "langchain-ollama>=1.0.1",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
